--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.6",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-intl": "^3.25.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "supabase-next-auth": "file:",
